# portalyus

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_initial.sql  002_fix_disk_storage_types.sql
backend/src/: auth.rs  database.rs  handlers.rs  main.rs  models.rs  upload.rs
frontend/: .env.example  Dockerfile  ENV_SETUP.md  astro.config.mjs  nginx.conf  package-lock.json  package.json  tailwind.config.mjs
frontend/public/: admin.js
frontend/src/: env.d.ts  index.css
frontend/src/components/: Navigation.tsx  VideoCard.tsx  VideoPlayer.tsx
frontend/src/components/admin/: AdminPanel.tsx  CategoryManagement.tsx  ChannelManagement.tsx  ChunkedUpload.tsx  Dashboard.tsx  DiskManagement.tsx  Header.tsx  Sidebar.tsx  VideoManagement.tsx
frontend/src/config/: env.ts
frontend/src/layouts/: AdminLayout.astro  Layout.astro
frontend/src/pages/: 404.astro  iletisim.astro  index.astro  robots.txt.ts  sitemap.xml.ts  videolar.astro
frontend/src/pages/admin/: index.astro  login.astro
frontend/src/pages/kanal/: [slug].astro
frontend/src/pages/kategori/: [slug].astro
frontend/src/pages/video/: [slug].astro
frontend/src/types/: index.ts
frontend/src/utils/: browserCompat.ts
